# app/Http/Controllers/Api/BlogController.php
@@ -8,19 +8,48 @@ use App\Filters\FuzzyFilter;
 use App\Http\Resources\BlogDetailResource;
 use App\Http\Resources\BlogResource;
 use App\Models\Blog;
+use App\Models\Category;
+use App\Models\Tag;
+use App\Models\User;
+use App\Sorts\MostCommentSort;
+use App\Sorts\MostWishSort;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
+use Illuminate\Support\Arr;
 use OpenApi\Annotations as OA;
 use Spatie\QueryBuilder\AllowedFilter;
+use Spatie\QueryBuilder\AllowedSort;
+use Spatie\QueryBuilder\Enums\SortDirection;
 use Spatie\QueryBuilder\QueryBuilder;
+use Throwable;
 
 class BlogController extends Controller
 {
     public function __construct()
     {
-        $this->middleware('auth:api');
-        $this->authorizeResource(Blog::class);
+//        $this->middleware('auth:sanctum');
+    }
+
+    private function query(array $payload = []): QueryBuilder
+    {
+        return QueryBuilder::for(Blog::query())
+            ->with(['user', 'category','media'])
+            ->when($limit = Arr::get($payload, 'limit'), fn ($q) => $q->limit($limit))
+            ->when($categoryId = Arr::get($payload, 'category_id'), fn ($q) => $q->where('category_id', $categoryId))
+            ->when($tagId = Arr::get($payload, 'tag_id'), fn ($q) => $q->withAnyTags([$tagId], 'tags'))
+            ->when($userId = Arr::get($payload, 'user_id'), fn ($q) => $q->where('user_id', $userId))
+            ->where('published', true)
+            ->defaultSort('-id')
+            ->allowedSorts([
+                'id', 'created_at', 'updated_at',
+                AllowedSort::custom('view', new MostCommentSort)->defaultDirection(SortDirection::DESCENDING),
+                AllowedSort::custom('comment', new MostCommentSort)->defaultDirection(SortDirection::DESCENDING),
+                AllowedSort::custom('wish', new MostWishSort)->defaultDirection(SortDirection::DESCENDING),
+            ])
+            ->allowedFilters([
+                AllowedFilter::custom('search', new FuzzyFilter(['translations' => ['title', 'description']])),
+            ]);
     }
 
     /**
@@ -33,7 +62,6 @@ class BlogController extends Controller
      *     @OA\Parameter(ref="#/components/parameters/page"),
      *     @OA\Parameter(ref="#/components/parameters/page_limit"),
      *     @OA\Parameter(ref="#/components/parameters/search"),
-     *     @OA\Parameter(ref="#/components/parameters/advanced_search"),
      *     @OA\Parameter(ref="#/components/parameters/sort"),
      *     @OA\Response(response=200,
      *         description="Successful operation",
@@ -63,18 +91,181 @@ class BlogController extends Controller
      *         )
      *     )
      * )
+     * @throws Throwable
      */
     public function index(Request $request): JsonResponse
     {
+//        _dds(auth('api')->user());
         return Response::dataWithAdditional(
-            QueryBuilder::for(Blog::query())
-                ->with(['user', 'category'])
-                ->when($request->input('limit'), fn ($q) => $q->limit($request->input('limit')))
-                ->defaultSort('-id')
-                ->allowedSorts(['id', 'created_at', 'updated_at'])
-                ->allowedFilters([
-                    AllowedFilter::custom('search', new FuzzyFilter(['translations' => ['title', 'description']])),
-                ])
+            $this->query([
+                'limit' => $request->input('limit', 1),
+            ])->paginate($request->input('page_limit', 1))->toResourceCollection(BlogResource::class),
+            [
+                'aaa' => 'bbbb',
+            ]
+        );
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/blog/category/{category}",
+     *     operationId="getBlogsByCategory",
+     *     tags={"Blog"},
+     *     summary="get blogs list",
+     *     description="Returns list of blogs",
+     *     @OA\Parameter(name="category", required=true, in="path", @OA\Schema(type="string")),
+     *     @OA\Parameter(ref="#/components/parameters/page"),
+     *     @OA\Parameter(ref="#/components/parameters/page_limit"),
+     *     @OA\Parameter(ref="#/components/parameters/search"),
+     *     @OA\Parameter(ref="#/components/parameters/sort"),
+     *     @OA\Response(response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(type="object",
+     *             @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/BlogResource")),
+     *             @OA\Property(property="links", type="object",
+     *                 @OA\Property(property="first", type="string", default="http://localhost/api/blog?page=1"),
+     *                 @OA\Property(property="last", type="string", default="http://localhost/api/blog?page=4"),
+     *                 @OA\Property(property="prev", type="string", default="null", nullable=true),
+     *                 @OA\Property(property="next", type="string", default="http://localhost/api/blog?page=2", nullable=true),
+     *             ),
+     *             @OA\Property(property="meta", ref="#/components/schemas/Meta"),
+     *             @OA\Property(property="message", type="string", default="No message"),
+     *             @OA\Property(property="advance_search_field", type="array",
+     *
+     *                 @OA\Items(type="object",
+     *
+     *                     @OA\Property(property="key", type="string", default="id"),
+     *                     @OA\Property(property="label", type="string", default="text"),
+     *                     @OA\Property(property="type", type="string", default="number"),
+     *                 ),
+     *             ),
+     *             @OA\Property(property="extra", type="object",
+     *                 @OA\Property(property="default_sort", type="string", default="-id"),
+     *                 @OA\Property(property="sorts", type="array", @OA\Items(type="string"), default={"id", "created_at", "updated_at"}),
+     *             ),
+     *         )
+     *     )
+     * )
+     * @throws Throwable
+     */
+    public function indexByCategory(Request $request,Category $category): JsonResponse
+    {
+        return Response::dataWithAdditional(
+            $this->query([
+                'limit' => $request->input('limit', 1),
+                'category_id' => $category->id,
+            ])->paginate($request->input('page_limit', 1))->toResourceCollection(BlogResource::class),
+            [
+                'aaa' => 'bbbb',
+            ]
+        );
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/blog/tag/{tag}",
+     *     operationId="getBlogsByTag",
+     *     tags={"Blog"},
+     *     summary="get blogs list",
+     *     description="Returns list of blogs",
+     *     @OA\Parameter(name="tag", required=true, in="path", @OA\Schema(type="string")),
+     *     @OA\Parameter(ref="#/components/parameters/page"),
+     *     @OA\Parameter(ref="#/components/parameters/page_limit"),
+     *     @OA\Parameter(ref="#/components/parameters/search"),
+     *     @OA\Parameter(ref="#/components/parameters/sort"),
+     *     @OA\Response(response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(type="object",
+     *             @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/BlogResource")),
+     *             @OA\Property(property="links", type="object",
+     *                 @OA\Property(property="first", type="string", default="http://localhost/api/blog?page=1"),
+     *                 @OA\Property(property="last", type="string", default="http://localhost/api/blog?page=4"),
+     *                 @OA\Property(property="prev", type="string", default="null", nullable=true),
+     *                 @OA\Property(property="next", type="string", default="http://localhost/api/blog?page=2", nullable=true),
+     *             ),
+     *             @OA\Property(property="meta", ref="#/components/schemas/Meta"),
+     *             @OA\Property(property="message", type="string", default="No message"),
+     *             @OA\Property(property="advance_search_field", type="array",
+     *
+     *                 @OA\Items(type="object",
+     *
+     *                     @OA\Property(property="key", type="string", default="id"),
+     *                     @OA\Property(property="label", type="string", default="text"),
+     *                     @OA\Property(property="type", type="string", default="number"),
+     *                 ),
+     *             ),
+     *             @OA\Property(property="extra", type="object",
+     *                 @OA\Property(property="default_sort", type="string", default="-id"),
+     *                 @OA\Property(property="sorts", type="array", @OA\Items(type="string"), default={"id", "created_at", "updated_at"}),
+     *             ),
+     *         )
+     *     )
+     * )
+     * @throws Throwable
+     */
+    public function indexByTag(Request $request,Tag $tag): JsonResponse
+    {
+        return Response::dataWithAdditional(
+            $this->query([
+                'limit' => $request->input('limit', 1),
+            ])->paginate($request->input('page_limit', 1))->toResourceCollection(BlogResource::class),
+            [
+                'aaa' => 'bbbb',
+            ]
+        );
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/blog/author/{user}",
+     *     operationId="getBlogsUser",
+     *     tags={"Blog"},
+     *     summary="get blogs list",
+     *     description="Returns list of blogs",
+     *     @OA\Parameter(name="user", required=true, in="path", @OA\Schema(type="integer")),
+     *     @OA\Parameter(ref="#/components/parameters/page"),
+     *     @OA\Parameter(ref="#/components/parameters/page_limit"),
+     *     @OA\Parameter(ref="#/components/parameters/search"),
+     *     @OA\Parameter(ref="#/components/parameters/sort"),
+     *     @OA\Response(response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(type="object",
+     *             @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/BlogResource")),
+     *             @OA\Property(property="links", type="object",
+     *                 @OA\Property(property="first", type="string", default="http://localhost/api/blog?page=1"),
+     *                 @OA\Property(property="last", type="string", default="http://localhost/api/blog?page=4"),
+     *                 @OA\Property(property="prev", type="string", default="null", nullable=true),
+     *                 @OA\Property(property="next", type="string", default="http://localhost/api/blog?page=2", nullable=true),
+     *             ),
+     *             @OA\Property(property="meta", ref="#/components/schemas/Meta"),
+     *             @OA\Property(property="message", type="string", default="No message"),
+     *             @OA\Property(property="advance_search_field", type="array",
+     *
+     *                 @OA\Items(type="object",
+     *
+     *                     @OA\Property(property="key", type="string", default="id"),
+     *                     @OA\Property(property="label", type="string", default="text"),
+     *                     @OA\Property(property="type", type="string", default="number"),
+     *                 ),
+     *             ),
+     *             @OA\Property(property="extra", type="object",
+     *                 @OA\Property(property="default_sort", type="string", default="-id"),
+     *                 @OA\Property(property="sorts", type="array", @OA\Items(type="string"), default={"id", "created_at", "updated_at"}),
+     *             ),
+     *         )
+     *     )
+     * )
+     * @throws Throwable
+     */
+    public function indexByUser(Request $request,User $user): JsonResponse
+    {
+        return Response::dataWithAdditional(
+            $this->query([
+                'limit' => $request->input('limit', 1),
+            ])->paginate($request->input('page_limit', 1))->toResourceCollection(BlogResource::class),
+            [
+                'aaa' => 'bbbb',
+            ]
         );
     }
 
@@ -85,7 +276,7 @@ class BlogController extends Controller
      *     tags={"Blog"},
      *     summary="Get blog information",
      *     description="Returns blog data",
-     *     @OA\Parameter(name="blog", required=true, in="path", @OA\Schema(type="integer")),
+     *     @OA\Parameter(name="blog", required=true, in="path", @OA\Schema(type="string")),
      *     @OA\Response(response=200,
      *         description="Successful operation",
      *         @OA\JsonContent(type="object",
@@ -99,7 +290,7 @@ class BlogController extends Controller
     {
         return Response::data(
             [
-                'blog' => BlogDetailResource::make($blog->load(['user', 'category'])),
+                'blog' => BlogDetailResource::make($blog->load(['user', 'category','media'])),
             ]
         );
     }
